[tool.poetry]
name = "MITx Online"
version = "0.69.1"
description = "MITx Online"
license = "BSD-3"
readme = "README.md"
packages = []
authors  = ["MIT ODL"]


[tool.poetry.dependencies]
python = "3.9.18"

beautifulsoup4 = "^4.8.2"
bleach = "^5.0.1"
boto3 = "^1.16.63"
celery = "^5.2.2"
celery-redbeat = "^2.0.0"
deepdiff = "^6.6.1"
dj-database-url = "^0.5.0"
django = "^3.2.18"
django-anymail = {extras = ["mailgun"], version = "^8.4"}
django-cors-headers = "^3.11.0"
django-countries = "^7.2.1"
django-filter = "^2.4.0"
django-fsm = "^2.8.0"
django-fsm-admin = "^1.2.4"
django-hijack = "^2.1.10"
django-hijack-admin = "^2.1.10"
django-ipware = "^4.0.0"
django-oauth-toolkit = "^1.7.0"
django-redis = "^5.0.0"
django-reversion = "^4.0.1"
django-robots = "^4.0.0"
django-server-status = "^0.7.3"
django-storages = "^1.11.1"
django-treebeard = "^4.5.1"
django-user-agents = "^0.4.0"
django-webpack-loader = "^1.4.1"
djangorestframework = "^3.12.4"
djoser = "^2.1.0"
drf-extensions = "^0.7.1"
edx-api-client = "^1.8.0"
hubspot-api-client = "^6.1.0"
hypothesis = "4.23.9"
ipython = "^8.0.0"
mitol-django-authentication = "1.6.0"
mitol-django-common = "2.7.0"
mitol-django-google-sheets = "2.6.0"
mitol-django-google-sheets-deferrals = "2023.6.9"
mitol-django-google-sheets-refunds = "2023.6.9"
mitol-django-hubspot-api = "2023.5.22"
mitol-django-mail = "3.3.0"
mitol-django-openedx = "1.3.0"
mitol-django-payment-gateway = "1.9.1"
newrelic = "^6.4.1.158"
posthog = "^3.0.1"
psycopg2 = "^2.9.5"
pyOpenSSL = "^23.1.1"
pycountry = "^19.7.15"
redis = "^4.4.4"
requests = "^2.28.2"
sentry-sdk = "^1.4.2"
social-auth-app-django = "^4.0.0"
ulid-py = "^1.1.0"
user-util = "^0.1.5"
uwsgi = "^2.0.19"
uwsgitop = "^0.11"
wagtail = "^5.0"
wagtail-metadata = "^5.0.0"
mitol-django-olposthog = "^2024.5.14"


[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
ddt = "^1.6.0"
django-debug-toolbar = "^4.1.0"
factory-boy = "^3.2.0"
faker = "^8.8.2"
flaky = "^3.7.0"
freezegun = "^1.2"
ipdb = "^0.13.13"
nplusone = "^1.0.0"
pdbpp = "^0.10.3"
pre-commit = "^3.7.0"
pytest = "^6.1.2"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
pytest-env = "^0.6.2"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.11.1"
responses = "^0.23.1"
ruff = "^0.4"
semantic-version = "^2.10.0"
wagtail-factories = "^3.1"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    # "AIR",  # Airflow
    # "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    # "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90",  # mccabe
    # "COM",  # flake8-commas
    # "CPY",  # flake8-copyright
    "D",  # pydocstyle
    "DJ",  # flake8-django
    "DTZ",  # flake8-datetimez
    "E",  # Pycodestyle Error
    "EM",  # flake8-errmsg
    "ERA",  # eradicate
    "EXE",  # flake8-executable
    "F",  # Pyflakes
    "FA",  # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    "FIX",  # flake8-fixme
    "FLY",  # flynt
    # "FURB",  # refurb
    "G",  # flake8-logging-format
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "N",  # pep8-naming
    # "NPY",  # NumPy-specific rules
    # "PD",  # pandas-vet
    "PERF",  # Perflint
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",  # Pylint
    "PT",  # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "SLOT",  # flake8-slots
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TCH",  # flake8-type-checking
    "TD",  # flake8-todos
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Pycodestyle Warning
    "YTT",  # flake8-2020
]
ignore = [
    "A003",
    "B008",
    "B905",
    "COM812",
    "COM819",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D202",
    "D205",
    "D206",
    "D300",
    "D301",
    "D400",
    "D401",
    "E111",
    "E114",
    "E117",
    "E501",
    "INP001",
    "ISC001",
    "ISC001",
    "ISC002",
    "N803",
    "N806",
    "N999",
    "PIE804",
    "PLR0912",
    "PT023",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "RET505",
    "RET506",
    "RET507",
    "RET508",
    "RUF012",
    "TRY003",
    "UP007",
    "W191"
]
fixable = ["ALL"]

typing-modules = ["colour.hints"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["ARG001", "E501", "S101", "PLR2004"]
"test_*.py" = ["ARG001", "E501", "S101", "PLR2004"]
"**/migrations/**" = ["ARG001", "D101", "D100"]
