[tool.poetry]
name = "MITx Online"
version = "0.69.1"
description = "MITx Online"
authors = [{ name = "MIT ODL" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "BSD-3"
dependencies = [
    "beautifulsoup4>=4.8.2,<5",
    "bleach>=6.0.0,<7",
    "boto3>=1.16.63,<2",
    "celery>=5.2.2,<6",
    "celery-redbeat>=2.0.0,<3",
    "click>=8.1,!=8.2.0",
    "deepdiff>=8.0.0,<9",
    "dj-database-url>=0.5.0,<0.6",
    "django==5.1.15",
    "django-anymail[mailgun]>=11.1,<12",
    "django-cors-headers>=4.0.0,<5",
    "django-countries>=7.2.1,<8",
    "django-filter>=24.3,<25",
    "django-health-check",
    "django-hijack>=3.6.0,<4",
    "django-ipware>=7.0.0,<8",
    "django-redis>=6.0.0,<7",
    "django-oauth-toolkit==3.1",
    "django-reversion>=5.1.0,<6",
    "django-robots==6.1",
    "django-storages>=1.11.1,<2",
    "django-treebeard>=4.5.1,<5",
    "django-user-agents>=0.4.0,<0.5",
    "django-viewflow>=2.2.7,<3",
    "django-webpack-loader>=3.0.0,<4",
    "djangorestframework==3.16.1",
    "djoser>=2.1.0,<3",
    "drf-extensions>=0.8.0,<0.9",
    "drf-spectacular>=0.29.0,<0.30",
    "edx-api-client>=1.14.0,<2",
    "hubspot-api-client>=12.0.0,<13",
    "ipython>=8.0.0,<9",
    "mitol-django-apigateway==2025.8.14",
    "mitol-django-authentication>=2025.2.12,<2026",
    "mitol-django-common==2025.12.23.2",
    "mitol-django-hubspot-api==2025.12.18",
    "mitol-django-mail==2023.12.19",
    "mitol-django-openedx==2023.12.19",
    "mitol-django-payment-gateway==2023.12.19",
    "mitol-django-scim>=2025.5.23",
    "opentelemetry-api>=1.31.0",
    "opentelemetry-exporter-otlp>=1.31.0",
    "opentelemetry-instrumentation-celery>=0.52b0",
    "opentelemetry-instrumentation-django>=0.52b0",
    "opentelemetry-instrumentation-psycopg>=0.52b0",
    "opentelemetry-instrumentation-redis>=0.52b0",
    "opentelemetry-instrumentation-requests>=0.52b0",
    "opentelemetry-sdk>=1.31.0",
    "psycopg>=3.2.4,<4",
    "psycopg2>=2.9.5,<3",
    "pyOpenSSL>=23.1.1,<24",
    "pycountry>=24.6.1,<25",
    "pyparsing>=3.2,<4",
    "redis>=5.0.0,<6",
    "requests>=2.28.2,<3",
    "rich>=14.0.0,<15",
    "sentry-sdk>=2.29.1,<3",
    "ulid-py>=1.1.0,<2",
    "user-util>=0.1.5,<0.2",
    "wagtail==7.2.2",
    "wagtail-metadata>=5.0.0,<6",
    "djangorestframework-api-key>=3.1.0,<4",
    "setuptools<80.9",
    "mitol-django-google-sheets>=2025.6.13,<2026",
    "mitol-django-google-sheets-deferrals>=2025.3.17,<2026",
    "mitol-django-google-sheets-refunds>=2025.6.13,<2026",
    "pytest-lazy-fixtures>=1.1.4,<2",
    "tabulate>=0.9.0,<0.10",
    "python-redis-lock>=4.0.0,<5",
    "django-object-actions>=5.0.0,<6",
    "requests-oauthlib>=2.0.0,<3",
    "authlib>=1.6.3,<2",
    "trino>=0.336.0,<0.337",
    "granian>=2.5.4,<3",
    "mitol-django-olposthog>=2025.8.1,<2026",
    "django-removals>=1.1.6,<2",
    "django-prefetch>=1.2.3,<2",
]

[dependency-groups]
prod = [
    "uwsgi>=2.0.19,<3",
    "uwsgitop>=0.12,<0.13",
]
dev = [
    "anys>=0.3.1,<0.4",
    "bpython>=0.26,<0.27",
    "ddt>=1.6.0,<2",
    "django-debug-toolbar>=6.0.0,<7",
    "django-zeal>=2.0.4,<3",
    "factory-boy>=3.2.0,<4",
    "faker>=40.0.0,<=40.1.0",
    "flaky>=3.7.0,<4",
    "freezegun>=1.2,<2",
    "ipdb>=0.13.13,<0.14",
    "pdbpp>=0.11.6,<0.12",
    "pre-commit>=4.0.0,<5",
    "pytest-cov>=7.0.0,<8",
    "pytest-django>=4.5.2,<5",
    "pytest-env>=1.0.0,<2",
    "pytest-mock>=3.11.1,<4",
    "responses>=0.26.0,<0.27",
    "ruff>=0.15,<0.16",
    "semantic-version>=2.10.0,<3",
    "wagtail-factories>=4.2,<5",
    "pytest-xdist[psutil]>=3.6.1,<4",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.sources]
django-health-check = { git = "https://github.com/revsys/django-health-check", rev = "53f9bdc3a7acc8a577319987fef0bd3040eef4b4" }

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["b2b/keycloak_admin_dataclasses.py"]

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    # "AIR",  # Airflow
    # "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    # "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90",  # mccabe
    # "COM",  # flake8-commas
    # "CPY",  # flake8-copyright
    "D",  # pydocstyle
    "DJ",  # flake8-django
    "DTZ",  # flake8-datetimez
    "E",  # Pycodestyle Error
    "EM",  # flake8-errmsg
    "ERA",  # eradicate
    "EXE",  # flake8-executable
    "F",  # Pyflakes
    "FA",  # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    "FIX",  # flake8-fixme
    "FLY",  # flynt
    # "FURB",  # refurb
    "G",  # flake8-logging-format
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "N",  # pep8-naming
    # "NPY",  # NumPy-specific rules
    # "PD",  # pandas-vet
    "PERF",  # Perflint
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",  # Pylint
    "PT",  # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "SLOT",  # flake8-slots
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TCH",  # flake8-type-checking
    "TD",  # flake8-todos
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Pycodestyle Warning
    "YTT",  # flake8-2020
]
ignore = [
    "A003",
    "B008",
    "B905",
    "COM812",
    "COM819",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D202",
    "D205",
    "D206",
    "D300",
    "D301",
    "D400",
    "D401",
    "E111",
    "E114",
    "E117",
    "E501",
    "INP001",
    "ISC001",
    "ISC001",
    "ISC002",
    "N803",
    "N806",
    "N999",
    "PIE804",
    "PLR0912",
    "PT023",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "RET505",
    "RET506",
    "RET507",
    "RET508",
    "RUF012",
    "TRY003",
    "UP007",
    "W191"
]
fixable = ["ALL"]

typing-modules = ["colour.hints"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["ARG001", "E501", "S101", "PLR2004"]
"test_*.py" = ["ARG001", "E501", "S101", "PLR2004"]
"**/migrations/**" = ["ARG001", "D101", "D100"]
